Try fix not playing video on mobile

--- a/components/BgVideo/BgVideo.module.css
+++ b/components/BgVideo/BgVideo.module.css
@@ -8,6 +8,7 @@
   text-align: center;
   padding: 0 20px;
   color: white;
+  overflow: hidden;
 }
 .showcase--indented {
   position: relative;
